[gd_scene load_steps=13 format=3 uid="uid://bvpd01ej5e6e"]

[ext_resource type="Script" uid="uid://b1e7iohec7vc7" path="res://scripts/main.gd" id="1_sugp2"]
[ext_resource type="Script" uid="uid://bunulofsggfjs" path="res://scripts/managers/game_manager.gd" id="2_choun"]
[ext_resource type="Texture2D" uid="uid://cr8dywxbeh4lr" path="res://images/locations/static.png" id="2_jyhfs"]
[ext_resource type="Texture2D" uid="uid://uxe4g13uad0f" path="res://images/ui/overlay.png" id="3_tbgi4"]
[ext_resource type="Script" uid="uid://qnji6dibq78s" path="res://scripts/managers/resource_manager.gd" id="3_ya4ey"]
[ext_resource type="Script" uid="uid://g8rd14honuyc" path="res://scripts/managers/technology_manager.gd" id="4_eb6dy"]
[ext_resource type="Script" uid="uid://bw21ta00ouw0d" path="res://scripts/managers/location_manager.gd" id="5_trceg"]
[ext_resource type="Script" uid="uid://c8rhsjt0qldji" path="res://scripts/managers/save_manager.gd" id="6_a8y0u"]
[ext_resource type="Script" uid="uid://1tysbbduvddk" path="res://scripts/ui/ui_controller.gd" id="7_jkv2x"]
[ext_resource type="Script" uid="uid://jxat0lg5h7bm" path="res://scripts/ui/log_display.gd" id="10_jbj1t"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0wfyh"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sugp2"]
bg_color = Color(0.374139, 0.374139, 0.374139, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3

[node name="Main" type="Node"]
script = ExtResource("1_sugp2")

[node name="GameManager" type="Node" parent="."]
script = ExtResource("2_choun")

[node name="ResourceManager" type="Node" parent="GameManager"]
script = ExtResource("3_ya4ey")

[node name="TechnologyManager" type="Node" parent="GameManager"]
script = ExtResource("4_eb6dy")

[node name="LocationManager" type="Node" parent="GameManager"]
script = ExtResource("5_trceg")

[node name="SaveManager" type="Node" parent="GameManager"]
script = ExtResource("6_a8y0u")

[node name="UIController" type="Node" parent="GameManager"]
script = ExtResource("7_jkv2x")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CameraPanel" type="PanelContainer" parent="UI"]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 784.0
offset_bottom = 408.0
theme_override_styles/panel = SubResource("StyleBoxEmpty_0wfyh")

[node name="LocationPicture" type="TextureRect" parent="UI/CameraPanel"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("2_jyhfs")
expand_mode = 1

[node name="Overlay" type="TextureRect" parent="UI/CameraPanel"]
layout_mode = 2
texture = ExtResource("3_tbgi4")

[node name="SystemButtons" type="HBoxContainer" parent="UI"]
layout_mode = 0
offset_left = 512.0
offset_top = 416.0
offset_right = 784.0
offset_bottom = 448.0
alignment = 2

[node name="SaveButton" type="Button" parent="UI/SystemButtons"]
unique_name_in_owner = true
layout_mode = 2
text = "SAVE"

[node name="ClearLogButton" type="Button" parent="UI/SystemButtons"]
unique_name_in_owner = true
layout_mode = 2
text = "CLEAR LOG"

[node name="ResetButton" type="Button" parent="UI/SystemButtons"]
unique_name_in_owner = true
layout_mode = 2
text = "RESET"

[node name="ActionButtons" type="HBoxContainer" parent="UI"]
layout_mode = 0
offset_left = 8.0
offset_top = 416.0
offset_right = 512.0
offset_bottom = 448.0

[node name="RedeployButton" type="Button" parent="UI/ActionButtons"]
unique_name_in_owner = true
layout_mode = 2
text = "Redeploy"

[node name="ExploreButton" type="Button" parent="UI/ActionButtons"]
unique_name_in_owner = true
layout_mode = 2
text = "Explore (10)"

[node name="SearchButton" type="Button" parent="UI/ActionButtons"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "Search (10)"

[node name="ScanButton" type="Button" parent="UI/ActionButtons"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "Scan (10)"

[node name="SalvageButton" type="Button" parent="UI/ActionButtons"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "Salvage (10)"

[node name="TransportButton" type="Button" parent="UI/ActionButtons"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "Transport (10)"

[node name="EnergyBar" type="ProgressBar" parent="UI"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -568.0
offset_top = 134.0
offset_right = 208.0
offset_bottom = 162.0
grow_horizontal = 2
grow_vertical = 2
value = 100.0
rounded = true
show_percentage = false

[node name="EnergyLabel" type="Label" parent="UI/EnergyBar"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -29.0
offset_top = -11.5
offset_right = 29.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Energy:"

[node name="ResultPanel" type="PanelContainer" parent="UI"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -568.0
offset_top = -152.0
offset_right = 208.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 0

[node name="ScrollContainer" type="ScrollContainer" parent="UI/ResultPanel"]
layout_mode = 2
follow_focus = true

[node name="ResultLog" type="VBoxContainer" parent="UI/ResultPanel/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("10_jbj1t")

[node name="ResourcesPanel" type="PanelContainer" parent="UI"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -360.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = 256.0
grow_horizontal = 0

[node name="ResourcesContainer" type="VBoxContainer" parent="UI/ResourcesPanel"]
layout_mode = 2

[node name="ResourcesHeader" type="Label" parent="UI/ResourcesPanel/ResourcesContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 18
theme_override_styles/normal = SubResource("StyleBoxFlat_sugp2")
text = "Resources"
horizontal_alignment = 1

[node name="ScrapMetalLabel" type="Label" parent="UI/ResourcesPanel/ResourcesContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Scrap Metal: 0"
horizontal_alignment = 1

[node name="EWasteLabel" type="Label" parent="UI/ResourcesPanel/ResourcesContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "E-Waste: 0"
horizontal_alignment = 1

[node name="PlasticsLabel" type="Label" parent="UI/ResourcesPanel/ResourcesContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Plastics: 0"
horizontal_alignment = 1

[node name="TechPanel" type="PanelContainer" parent="UI"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -360.0
offset_top = -384.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 0
grow_vertical = 0

[node name="TechContainer" type="VBoxContainer" parent="UI/TechPanel"]
unique_name_in_owner = true
layout_mode = 2

[node name="TechnologyHeader" type="Label" parent="UI/TechPanel/TechContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 18
theme_override_styles/normal = SubResource("StyleBoxFlat_sugp2")
text = "Technology"
horizontal_alignment = 1

[node name="SSBatteriesButton" type="Button" parent="UI/TechPanel/TechContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "LI Batteries
1 Scrap Metal, 4 E-Waste"

[node name="PVPanelButton" type="Button" parent="UI/TechPanel/TechContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "PV Panel
2 E-Waste, 3 Plastics"

[node name="HDLensButton" type="Button" parent="UI/TechPanel/TechContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "HD Lens
1 Scrap Metal, 4 Plastics"

[node name="QTDeviceButton" type="Button" parent="UI/TechPanel/TechContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "QT Device
3 Scrap Metal, 2 Plastics"

[node name="HFSensorsButton" type="Button" parent="UI/TechPanel/TechContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "HF Sensors
2 Scrap Metal, 3 E-Waste"

[node name="HELaserButton" type="Button" parent="UI/TechPanel/TechContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "HE Laser
4 E-Waste, 1 Plastics"
